--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@
   justify-content: center;
 }
 
+.flex-column {
+  flex-direction: column;
+}
+
+button {
+  border: none;
+  border-radius: 3px;
+}
+
 body {
   position: relative;
   display: grid;
@@ -29,14 +38,7 @@ body {
   padding: 0;
 }
 
-.main {
-  width: 100%;
-}
-
 .timer {
-  flex-direction: column;
-  /* width: 600px;
-  height: 600px;*/
   width: 60vw;
   height: 60vw;
   text-align: center;
@@ -47,10 +49,8 @@ body {
   border: 1px solid #333;
   background-color: #37f8;
   user-select: none;
-  color: white;
   text-shadow: 1px 0 var(--clr-txt-shadow), -1px 0 var(--clr-txt-shadow),
     0 1px var(--clr-txt-shadow), 0 -1px var(--clr-txt-shadow);
-  cursor: pointer;
 }
 
 .timer h1 {
@@ -89,20 +89,8 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  cursor: pointer;
-  padding: 1rem;
-  box-shadow: 0 0 3rem rgba(255, 255, 255, 0.2);
-  border: none;
   background-color: #37ff;
-  border-radius: 3px;
-  color: white;
   font-size: 1.125rem;
-}
-
-.settings:hover,
-.form button:hover {
-  box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
 }
 
 .black-out {
@@ -112,8 +100,7 @@ body {
   width: 100%;
   height: 100%;
   z-index: 10;
-  box-shadow: 0 0 0 100rem black;
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   border: 3px solid white;
 }
 
@@ -123,20 +110,9 @@ body {
   left: 25%;
   width: 50%;
   height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   z-index: 100;
   text-align: center;
-  background-color: #000b;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  background-color: #000c;
 }
 
 .form > input {
@@ -144,13 +120,8 @@ body {
 }
 
 .form button {
-  border: none;
   background-color: #37f;
-  color: white;
-  padding: 1rem 2rem;
-  border-radius: 3px;
   margin-top: 2rem;
-  cursor: pointer;
 }
 
 .form-header {
@@ -161,20 +132,27 @@ body {
 
 .reset-button {
   position: absolute;
-  background-color: #f739;
-  border: none;
-  color: white;
-  padding: 1rem 2rem;
+  background-color: #f73b;
   top: 88%;
-  border-radius: 3px;
   font-size: 1.125rem;
 }
 
-.reset-button:hover {
+.reset-button,
+.settings,
+.timer,
+.form button {
+  padding: 1rem 2rem;
   cursor: pointer;
-  box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.3);
-  transition: 0.3s;
+  color: white;
 }
+
+.reset-button:hover,
+.settings:hover,
+.form button:hover {
+  box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.3);
+  transition: 0.5s;
+}
+
 
 @media screen and (min-width: 1024px) {
   .timer {
