--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ body {
   position: absolute;
   top: 0;
   right: 0;
-  background-color: #37ff;
+  background-color: #37fd;
   font-size: 1.125rem;
 }
 
